--- a/eRestaurantDemo/eRestaurantDemo/packages/repositories.config
+++ b/eRestaurantDemo/eRestaurantDemo/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\eRestaurantWebSite\packages.config" />
+  <repository path="..\eRestaruantSystem\packages.config" />
 </repositories>
