--- a/eRestaurantDemo/eRestaurantWebSite/Web.config
+++ b/eRestaurantDemo/eRestaurantWebSite/Web.config
@@ -8,9 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-eRestaurantWebSite-de17ddc8-ae5f-4b0c-84bf-4bc83449b873;AttachDbFilename=|DataDirectory|\aspnet-eRestaurantWebSite-de17ddc8-ae5f-4b0c-84bf-4bc83449b873.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="WebConfigurationString.config"/>
+    
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
