--- a/eRestaurantDemo/eRestaurantDemo/eRestaruantSystem/eRestaurantSystem.csproj
+++ b/eRestaurantDemo/eRestaurantDemo/eRestaruantSystem/eRestaurantSystem.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D7EDA64E-5C89-4092-9745-0244FA21A7DA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eRestaruantSystem</RootNamespace>
-    <AssemblyName>eRestaruantSystem</AssemblyName>
+    <RootNamespace>eRestaurantSystem</RootNamespace>
+    <AssemblyName>eRestaurantSystem</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,7 +52,7 @@
     <Compile Include="DAL\Entities\Reservation.cs" />
     <Compile Include="DAL\Entities\SpecialEvent.cs" />
     <Compile Include="DAL\Entities\Table.cs" />
-    <Compile Include="DAL\eRestaruantContext.cs" />
+    <Compile Include="DAL\eRestaurantContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
