--- a/eRestaurantDemo/eRestaurantWebSite/Web.config
+++ b/eRestaurantDemo/eRestaurantWebSite/Web.config
@@ -97,6 +97,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="eRestaurantSystem.DAL.eRestaurantContext, eRestaurantSystem" disableDatabaseInitialization="true"></context>
+    
+              <!--dissable initializatoi the data base so it does not create new one.-->
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
