--- a/eRestaurantDemo/eRestaurantWebSite/WebConfigurationString.config
+++ b/eRestaurantDemo/eRestaurantWebSite/WebConfigurationString.config
@@ -4,7 +4,7 @@
     providerName="System.Data.SqlClient" />
 
     <add name="EatIn"
-   connectionString="Data source=.;Initial Catalog=eRestaurant;Intergrated Sequrity=SSPI"
+   connectionString="Data source=.;Initial Catalog=eRestaurant;Integrated Security=SSPI"
     providerName="System.Data.SqlClient" />
 
   </connectionStrings>
